充值订单管理模块

--- a/lottery-admin/src/main/resources/templates/account-manage.html
+++ b/lottery-admin/src/main/resources/templates/account-manage.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-6 offset-sm-3 bank-card-info-item">
-				<label class="bank-card-info-item-title">最近操作时间:</label> <label class="bank-card-info-item-value">{{accountInfo.bankInfoLatelyModifyTime }}</label>
+				<label class="bank-card-info-item-title">银行资料最近修改时间:</label> <label class="bank-card-info-item-value">{{accountInfo.bankInfoLatelyModifyTime }}</label>
 			</div>
 		</div>
 		{{if accountInfo.bankInfoLatelyModifyTime == null}}
