--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -16,6 +16,9 @@
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/game-manage'}" v-on:click="navTo('/game-manage')"><a class="nav-link" href="#">游戏管理</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/lottery-situation'}" v-on:click="navTo('/lottery-situation')"><a class="nav-link" href="#">开奖情况</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class="nav-link" href="#">投注记录</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/account-change-log'}" v-on:click="navTo('/account-change-log')"><a class="nav-link" href="#">帐变日志</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/recharge-order'}" v-on:click="navTo('/recharge-order')"><a class="nav-link" href="#">充值订单</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class="nav-link" href="#">提现记录</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/account-manage'}" v-on:click="navTo('/account-manage')"><a class="nav-link" href="#">账号管理</a></li>
 			</ul>
 		</nav>
