--- a/lottery-web/src/main/resources/templates/common/header.html
+++ b/lottery-web/src/main/resources/templates/common/header.html
@@ -100,7 +100,7 @@
 						<ul class="nav nav-tabs personal-tabs">
 							<li class="nav-item" v-on:click="goTo('/personal-center')"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/personal-center.png"><span>个人中心</span></a></li>
 							<li class="nav-item" v-on:click="goTo('/recharge')"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/top-up.png"><span>充值</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/withdrawal.png"><span>提现</span></a></li>
+							<li class="nav-item" v-on:click="goTo('/withdraw')"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/withdrawal.png"><span>提现</span></a></li>
 							<li class="nav-item" v-on:click="goTo('/betting-record')"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/betting-record.png"><span>投注记录</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/message.png"><span>站内信</span></a></li>
 							<li class="nav-item" v-on:click="logout"><a class="nav-link" href="#"><img src="/images/personal-tabs-icons/exit.png"><span>安全退出</span></a></li>
