--- a/lottery-web/src/main/resources/templates/common/personal-navbar.html
+++ b/lottery-web/src/main/resources/templates/common/personal-navbar.html
@@ -40,7 +40,7 @@
 					<ul class="navbar-nav">
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/personal-center'}" v-on:click="navTo('/personal-center')"><a class="nav-link" href="#">个人中心</a></li>
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/recharge'}" v-on:click="navTo('/recharge')"><a class="nav-link" href="#">线上充值</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">线上提现</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/withdraw'}" v-on:click="navTo('/withdraw')"><a class="nav-link" href="#">线上提现</a></li>
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class=" nav-link" href="#">投注记录</a></li>
 						<li class="nav-item"><a class="nav-link" href="#">追号记录</a></li>
 						<li class="nav-item"><a class="nav-link" href="#">代理中心</a></li>
