--- a/lottery-web/src/main/resources/templates/xjssc.html
+++ b/lottery-web/src/main/resources/templates/xjssc.html
@@ -1,18 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>重庆时时彩</title>
+<title>新疆时时彩</title>
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
-
 <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-
 <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
-
 <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
 <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
 <script src="https://cdn.bootcss.com/dayjs/1.7.8/dayjs.min.js"></script>
-<script src="https://cdn.bootcss.com/dayjs/1.7.8/locale/zh-cn.js"></script>
 </head>
 
 <body style="height: 100%;">
