--- a/lottery-web/src/main/resources/templates/cqssc.html
+++ b/lottery-web/src/main/resources/templates/cqssc.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
@@ -11,7 +12,7 @@
 <script src="https://cdn.bootcss.com/dayjs/1.7.8/dayjs.min.js"></script>
 </head>
 
-<body style="height: 100%;">
+<body>
 	<script type="text/javascript">
 		var globalGameCode = 'CQSSC';
 		var globalGameName = '重庆时时彩';
