--- a/lottery-admin/src/main/resources/templates/recharge-order.html
+++ b/lottery-admin/src/main/resources/templates/recharge-order.html
@@ -16,44 +16,27 @@
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://unpkg.com/art-template@4.13.2/lib/template-web.js"></script>
 <link href="/css/common/common.css" rel="stylesheet" type="text/css">
-<script id="recharge-order-info" type="text/html">
-	<div class="recharge-order-info">
+<script id="recharge-order-detail" type="text/html">
+	<div class="table-detail">
 		<div class="row">
-				<div class="col-sm-5 recharge-order-item-title">订单有效时间:</div>
-				<div class="col-sm-7 recharge-order-item-value">{{rechargeOrderInfo.usefulTime }}</div>
+				<div class="col-sm-5 table-detail-item-label">订单有效时间:</div>
+				<div class="col-sm-7 table-detail-item-value">{{rechargeOrderInfo.usefulTime }}</div>
 		</div>	
 		<div class="row">
-				<div class="col-sm-5 recharge-order-item-title">系统处理时间:</div>
-				<div class="col-sm-7 recharge-order-item-value">{{rechargeOrderInfo.dealTime }}</div>
+				<div class="col-sm-5 table-detail-item-label">系统处理时间:</div>
+				<div class="col-sm-7 table-detail-item-value">{{rechargeOrderInfo.dealTime }}</div>
 		</div>	
 		<div class="row">
-				<div class="col-sm-5 recharge-order-item-title">备注:</div> 
-				<div class="col-sm-7 recharge-order-item-value">{{rechargeOrderInfo.note }}</div>
+				<div class="col-sm-5 table-detail-item-label">备注:</div> 
+				<div class="col-sm-7 table-detail-item-value">{{rechargeOrderInfo.note }}</div>
 		</div>	
 		<div class="row">
-				<div class="col-sm-5 recharge-order-item-title">支付地址:</div>
-				<div class="col-sm-7 recharge-order-item-value">{{rechargeOrderInfo.payUrl }}</div>
+				<div class="col-sm-5 table-detail-item-label">支付地址:</div>
+				<div class="col-sm-7 table-detail-item-value">{{rechargeOrderInfo.payUrl }}</div>
 		</div>
 	</div>
 </script>
 <style type="text/css">
-.recharge-order-info {
-	
-}
-
-.recharge-order-info .row {
-	padding-bottom: 10px;
-	width: 1200px;
-}
-
-.recharge-order-item-title {
-	text-align: end;
-}
-
-.recharge-order-item-value {
-	word-wrap: break-word;
-	text-align: start;
-}
 </style>
 </head>
 
