--- a/lottery-web/src/main/resources/templates/personal-center.html
+++ b/lottery-web/src/main/resources/templates/personal-center.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
@@ -12,10 +13,11 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/bootstrap-table.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/bootstrap-table.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/locale/bootstrap-table-zh-CN.min.js"></script>
+<link href="/css/common/common.css" rel="stylesheet" type="text/css">
 <link href="/css/personal-center.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="height: 100%;">
+<body>
 	<div class="container">
 		<div th:replace="common/header::html"></div>
 		<div th:replace="common/personal-navbar::html"></div>
@@ -24,6 +26,7 @@
 				<div class="col-sm-12">
 					<nav class="navbar navbar-expand-sm bg-light personal-center-navbar">
 						<ul class="navbar-nav">
+							<li class="nav-item" v-bind:class="{'selected-personal-center-navbar-item': currentTab == 'inviteCode'}" v-on:click="switchInviteCodeTab"><a class="nav-link" href="#"><span>邀请码</span></a></li>
 							<li class="nav-item" v-bind:class="{'selected-personal-center-navbar-item': currentTab == 'bankCardInfo'}" v-on:click="switchBankCardInfoTab"><a class="nav-link" href="#"><span>银行卡资料管理</span></a></li>
 							<li class="nav-item" v-bind:class="{'selected-personal-center-navbar-item': currentTab == 'loginPwdModify'}" v-on:click="switchLoginPwdModifyTab"><a class=" nav-link" href="#"><span>登录密码修改</span></a></li>
 							<li class="nav-item" v-bind:class="{'selected-personal-center-navbar-item': currentTab == 'moneyPwdModify'}" v-on:click="switchMoneyPwdModifyTab"><a class="nav-link" href="#"><span>资金密码修改</span></a></li>
@@ -33,6 +36,51 @@
 					</nav>
 				</div>
 			</div>
+
+			<div id="inviteCodeTab" v-show="currentTab == 'inviteCode'">
+				<div class="none-invite-code" v-show="inviteDetailsInfo.periodOfValidity == null">
+					<div class="row">
+						<div class="col-sm-7 offset-sm-3">
+							<div class="alert alert-light" style="font-size: 30px;">
+								<span style="color: red;">*</span> 您还没有邀请码.
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6 offset-sm-5">
+							<button type="button" class="btn btn-secondary btn-lg" v-on:click="generateInviteCode">获取邀请码</button>
+						</div>
+					</div>
+				</div>
+				<div class="invite-code-info" v-show="inviteDetailsInfo.periodOfValidity != null">
+					<div class="row">
+						<div class="col-sm-6 offset-sm-3 invite-code-info-item">
+							<label>邀请码:</label> <span>{{inviteDetailsInfo.code}}</span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6 offset-sm-3 invite-code-info-item">
+							<label>已邀请人数:</label> <span>{{inviteDetailsInfo.numberOfInvite}}人</span>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6 offset-sm-3 invite-code-info-item">
+							<label>有效期:</label> <span>{{inviteDetailsInfo.periodOfValidity}}</span>
+						</div>
+					</div>
+					<div class="row" v-show="!inviteDetailsInfo.validFlag">
+						<div class="col-sm-7 offset-sm-3">
+							<div style="font-size: 30px; color: red;">你的邀请码已过期,请重新获取邀请码.</div>
+						</div>
+					</div>
+					<div class="row" v-show="!inviteDetailsInfo.validFlag">
+						<div class="col-sm-6 offset-sm-5">
+							<button type="button" class="btn btn-secondary btn-lg" v-on:click="generateInviteCode">获取邀请码</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div id="bankCardInfoTab" v-show="currentTab == 'bankCardInfo'">
 				<div class="col-sm-6 offset-sm-3" v-show="editBankInfoFlag">
 					<form class="edit-bank-info-form">
@@ -88,7 +136,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-6 offset-sm-4">
-							<button type="button" class="btn btn-secondary btn-sm" v-on:click="editBankInfo">更换银行卡</button>
+							<button type="button" class="btn btn-secondary" v-on:click="editBankInfo">更换银行卡</button>
 						</div>
 					</div>
 				</div>
