--- a/lottery-web/src/main/resources/templates/recharge.html
+++ b/lottery-web/src/main/resources/templates/recharge.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
@@ -13,7 +14,7 @@
 }
 
 .recharge-form-item {
-	padding-bottom: 16px;
+	padding-bottom: 30px;
 }
 
 .recharge-form-item label {
