--- a/lottery-web/src/main/resources/templates/register.html
+++ b/lottery-web/src/main/resources/templates/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
@@ -57,6 +58,9 @@
 					<h2>用户注册</h2>
 					<form>
 						<div class="form-group">
+							<label>邀请码:</label> <input type="text" class="form-control" v-model="inviteCode">
+						</div>
+						<div class="form-group">
 							<label>用户名:</label> <input type="text" class="form-control" placeholder="以字母开头,长度为6-12个字母和数字!" v-model="userName">
 						</div>
 						<div class="form-group">
@@ -95,6 +99,7 @@
 			el : '#register',
 			data : {
 				registerSuccessFlag : false,
+				inviteCode : '',
 				userName : '',
 				realName : '',
 				password : '',
@@ -131,6 +136,7 @@
 						return;
 					}
 					that.$http.post('/userAccount/register', {
+						inviteCode : that.inviteCode,
 						userName : that.userName,
 						realName : that.realName,
 						loginPwd : that.password
