--- a/lottery-web/src/main/resources/templates/cqssc.html
+++ b/lottery-web/src/main/resources/templates/cqssc.html
@@ -17,7 +17,7 @@
 		var globalGameCode = 'CQSSC';
 		var globalGameName = '重庆时时彩';
 	</script>
-	<div class="container">
+	<div class="container" style="padding-left: 0; padding-right: 0;">
 		<div th:replace="common/header::html"></div>
 		<div th:replace="common/ssc::html"></div>
 		<div th:replace="component/betting-order-details-modal::html"></div>
