配置项管理

--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -20,6 +20,8 @@
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/recharge-order'}" v-on:click="navTo('/recharge-order')"><a class="nav-link" href="#">充值订单</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/withdraw-record'}" v-on:click="navTo('/withdraw-record')"><a class="nav-link" href="#">提现记录</a></li>
 				<li class="nav-item" v-bind:class="{'active': currentPathName == '/account-manage'}" v-on:click="navTo('/account-manage')"><a class="nav-link" href="#">账号管理</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/config-manage'}" v-on:click="navTo('/config-manage')"><a class="nav-link" href="#">配置项管理</a></li>
+				<li class="nav-item" v-bind:class="{'active': currentPathName == '/data-dict'}" v-on:click="navTo('/data-dict')"><a class="nav-link" href="#">数据字典</a></li>
 			</ul>
 		</nav>
 	</div>
